--- a/ipynb/10_scipy.ipynb
+++ b/ipynb/10_scipy.ipynb
@@ -272,6 +272,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "\n",
     "def f_N(x):\n",
     "    return np.exp(np.cos(-2 * x * np.pi))\n",
     "\n",
@@ -356,7 +357,7 @@
     "\n",
     "\n",
     "res, err = quad(inv_square_root, 0, 1)\n",
-    "res, err "
+    "res, err"
    ]
   },
   {
@@ -643,8 +644,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.integrate import odeint\n",
     "import numpy as np\n",
+    "from scipy.integrate import odeint\n",
     "\n",
     "def f(y, t):\n",
     "    \"\"\"this is the rhs of the ODE to integrate, i.e. dy/dt=f(y,t)\"\"\"\n",
@@ -682,7 +683,7 @@
    "source": [
     "# https://www.math.ubc.ca/~pwalls/math-python/differential-equations/first-order/\n",
     "\n",
-    "def odeEuler(f,y0,t):\n",
+    "def odeEuler(f, y0, t):\n",
     "    '''Approximate the solution of y'=f(y,t) by Euler's method.\n",
     "\n",
     "    Parameters\n",
@@ -690,7 +691,7 @@
     "    f : function\n",
     "        Right-hand side of the differential equation y'=f(t,y), y(t_0)=y_0\n",
     "    y0 : number\n",
-    "        Initial value y(t0)=y0 wher t0 is the entry at index 0 in the array t\n",
+    "        Initial value y(t0)=y0 where t0 is the entry at index 0 in the array t\n",
     "    t : array\n",
     "        1D NumPy array of t values where we approximate y values. Time step\n",
     "        at each iteration is given by t[n+1] - t[n].\n",
@@ -1243,14 +1244,14 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from scipy.optimize import fmin\n",
     "import matplotlib.pyplot as plt\n",
+    "from scipy.optimize import fmin\n",
     "\n",
     "def f(x):\n",
-    "    return np.cos(x) - 3 * np.exp( -(x - 0.2) ** 2)\n",
+    "    return np.cos(x) - 3 * np.exp(-(x - 0.2) ** 2)\n",
     "\n",
     "\n",
-    "# plot function \n",
+    "# plot function\n",
     "x = np.arange(-10, 10, 0.1)\n",
     "y = f(x)\n",
     "\n",
@@ -1276,8 +1277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# find minima of f(x),\n",
-    "# starting from 1.0 and 2.0 respectively\n",
+    "# find minima of f(x), starting from 1.0 and 2.0 respectively\n",
     "minimum1 = fmin(f, 1.0)\n",
     "print(\"Start search at x=1., minimum is\", minimum1)\n",
     "minimum2 = fmin(f, 2.0)\n",
