--- a/ipynb/03_Tipi_di_Dati.ipynb
+++ b/ipynb/03_Tipi_di_Dati.ipynb
@@ -1002,6 +1002,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Di default `replace` sostituisce tutte le occorrenze della sottostringa: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = \"Stairways to Heaven, Heaven1, Heaven2\"\n",
+    "b = b.replace(\"Heaven\", \"Hell\")\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div style = \"width:95%; padding:5px 10px 5px; border-style:solid; border-width:0px 0px 0px 10px; border-color:#b8d0d0; margin:20px 0px 10px 10px\">\n",
     "    <h4> Imparare Facendo</h4>\n",
     "<OL>\n",
@@ -1067,11 +1085,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[123, 'duck', -42.5, 17, 1j, 'elephant']\n"
+     ]
+    }
+   ],
    "source": [
-    "a = [123, 'duck', -42, 17, 0, 'elephant']\n",
+    "a = [123, 'duck', -42.5, 17, 0+1j, 'elephant']\n",
     "print(a)"
    ]
   },
@@ -1084,9 +1110,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['M', 'i', 'c', 'k', 'e', 'y', ' ', 'M', 'o', 'u', 's', 'e']\n"
+     ]
+    }
+   ],
    "source": [
     "a = list('Mickey Mouse')\n",
     "print(a)"
