--- a/ipynb/13_Classi.ipynb
+++ b/ipynb/13_Classi.ipynb
@@ -1279,7 +1279,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Add  decoratori + @classmethod + @staticmethod"
+    "#Add  decoratori + @classmethod + @staticmethod + @dataclass"
    ]
   }
  ],
