--- a/ipynb/09_numpy_statistics.ipynb
+++ b/ipynb/09_numpy_statistics.ipynb
@@ -93,7 +93,7 @@
    "source": [
     "Il valor medio o media di un insieme di dati $x = [x_1,\\cdots,x_n]$ è\n",
     "$$ <x> = \\frac{\\sum_{i=1}^n x_i}{n} $$\n",
-    "Media utilizzando solo la funzione sum"
+    "Numpy fornisce il metodo `mean` per calcolarla:"
    ]
   },
   {
@@ -102,25 +102,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "media1 = dati.sum()/num_elementi\n",
-    "print(media1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Media utilizzando la funzione mean di numpy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "media2 = dati.mean()\n",
-    "print(media2)"
+    "media = dati.mean()\n",
+    "print(media)"
    ]
   },
   {
@@ -129,7 +112,7 @@
    "source": [
     "La varianza di un insieme di dati $x = [x_1,\\cdots,x_n]$ è\n",
     "$$ \\sigma^2  = \\,\\, <(x - <x>)^2> \\,\\, = \\frac{\\sum_{i=1}^n (x_i-<x>)^2}{n} = \\,\\,<x^2> -<x>^2$$\n",
-    "Varianza calcolata espicitamente"
+    "Numpy fornisce il metodo `var` per calcolarla:"
    ]
   },
   {
@@ -138,15 +121,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "varianza1 = (dati_sq - 2.*media1*dati + media1*media1).sum()/num_elementi # Notice array + const*array + const\n",
-    "print(varianza1)"
+    "varianza = dati.var()\n",
+    "print(varianza)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Varianza calcolata usando la funzione var di numpy."
+    "La deviazione standard, $\\sigma = \\sqrt{\\sigma^2}$, si calcola usando il metodo `std`:"
    ]
   },
   {
@@ -155,42 +138,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "varianza2 = dati.var()\n",
-    "print(varianza2)"
+    "deviazione_std = dati.std()\n",
+    "print(deviazione_std)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Deviazione standard, $\\sigma = \\sqrt{\\sigma^2}$, calcolata dalla varianza e usando la funzione std di numpy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "deviazione_std1 = np.sqrt(varianza2)\n",
-    "print(deviazione_std1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "deviazione_std2 = dati.std()\n",
-    "print(deviazione_std2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Talvolta è utile estrarre i dati a meno di un numero dato di deviazioni standard dal valor medio, oppure quelli che distano più\n",
+    "Talvolta è utile estrarre i dati pi&ugrave; vicini di un numero dato di deviazioni standard al valor medio, oppure quelli che distano pipi&ugrave;\n",
     "di un numero dato di deviazioni standard dal valor medio. Nell'esempio selezioniamo i dati all'interno di una deviazione standard:"
    ]
   },
@@ -200,7 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dati1 = np.array([n for n in dati if np.absolute(n - media1) < deviazione_std1])"
+    "dati1 = np.array([n for n in dati if np.absolute(n - media) < deviazione_std])"
    ]
   },
   {
@@ -218,7 +174,8 @@
    "source": [
     "<div style = \"width:95%; padding:5px 10px 5px; border-style:solid; border-width:0px 0px 0px 10px; border-color:#b8d0d0; margin:20px 0px 10px 10px\">\n",
     "    <h4> Imparare Facendo</h4>\n",
-    "    \n",
+    "<OL>\n",
+    "<LI>\n",
     "Dato l'array\n",
     "<code>\n",
     "my_arr = np.array([3.04645601, 2.97244915, 3.11895648, 2.23631771, 2.83300643,\n",
@@ -256,7 +213,12 @@
     "       3.07521061, 1.96260647, 2.91868837, 1.94448569, 2.96816534,\n",
     "       2.90343856, 2.33124355, 1.88310601, 1.93171459, 2.54151343])\n",
     "</code>\n",
-    "calcolate la sua media e standard deviation.\n",
+    "calcolate la sua media e deviazione standard usando la loro definizione e la funzione <b>np.sum</b>.\n",
+    "</LI>\n",
+    "<LI>\n",
+    "Calcolate media e deviazione standard di <code>my_arr</code> usando i metodi <b>mean</b> e <b>var</b>.\n",
+    "</LI>\n",
+    "</OL>\n",
     "</div>"
    ]
   },
@@ -293,7 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La conoscenza del minimo e del massimo valore dei dati è utile per determinare il `range` dei bin. Il numero di bin deve essere adattato di volta in volta per aiutare l'analisi."
+    "La conoscenza del minimo e del massimo valore dei dati è utile per determinare il `range` dei bin, cio&egrave; la coordinata dell'estremo inferiore del primo bin e la coordinata dell'estremo supereriore dell'ultimo bin. Il numero di bin deve essere adattato di volta in volta al set di dati per aiutare l'analisi."
    ]
   },
   {
@@ -349,7 +311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I patches sono i rettangoli (blu in questo caso) che vengono usati per disegnare l'istogramma."
+    "I patches sono le coordinate dei rettangoli (blu in questo caso) che vengono usati per disegnare l'istogramma."
    ]
   },
   {
@@ -379,8 +341,8 @@
     "    Fate il diagramma delle frequenze dell'array <b>my_arr</b>. In particolare\n",
     "<OL>\n",
     "<LI>Determinate un <b>range</b> ragionevole. \n",
-    "<LI>Variate il numero di bin, notando come un sia un numero troppo piccolo che uno troppo grande mascherano l'andamento dei dati.\n",
-    "<LI>Verificate se il valor medio e la standard deviation sono parametri utili nella comprensione di questo set di dati\n",
+    "<LI>Variate il numero di bin, notando come sia un numero troppo piccolo che uno troppo grande mascherano l'andamento dei dati.\n",
+    "<LI>Valutate se il valor medio e la standard deviation sono parametri utili nella comprensione di questo set di dati\n",
     "</OL>\n",
     "</div>"
    ]
@@ -436,6 +398,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 9.3.1 Alcuni esempi con distribuzioni di uso frequente:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- Come generare numeri distribuiti secondo la distribuzione normale standard, con valor medio $\\mu = 0.0$, e deviazione standard $\\sigma = 1.0\\,$. "
    ]
   },
@@ -446,6 +415,15 @@
    "outputs": [],
    "source": [
     "m1 = rng.normal(size=2000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(m1[170:202])"
    ]
   },
   {
@@ -519,6 +497,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print('m3[0:10]: ',m3[0:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "nbins = 12\n",
     "xrange = (-0.1, 1.1)    # ntupla\n",
     "fig, ax = plt.subplots()\n",
@@ -547,15 +534,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m4 = rng.integers(0, high=100, size=20)\n",
-    "print(m4)"
+    "m4 = rng.integers(0, high=100, size=1500)\n",
+    "print(m4[30:72])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    In letteratura si trovano ancora i generatori di numeri casuali meno recenti ( sempre in numpy.random)\n",
+    "    In letteratura si trovano ancora i generatori di numeri casuali meno recenti (sempre in numpy.random)\n",
     "    ======================================================================================================\n",
     "    rand                 Uniformly distributed values.\n",
     "    randn                Normally distributed values.\n",
@@ -569,7 +556,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Si può fissare il \"seme\" del generatore di numeri casuali in modo da ottenere la stessa sequenza più volte.\n",
+    "Si pu&ograve; fissare il \"seme\" del generatore di numeri casuali in modo da ottenere la stessa sequenza pi&ugrave; volte.\n",
     "Utile qundo si vogliono capire le analisi statistiche fatte da qualcun altro."
    ]
   },
@@ -669,7 +656,7 @@
     "    Di ciascun campione\n",
     "<OL>\n",
     "<LI>Fate l'istogramma delle frequenze.\n",
-    "<LI>Sovrapponete all'istogramma delle frequenze la funzione densità di probabilità gaussiana di valor medio $\\mu$ e deviazione standard $\\sigma$, facendo attenzione che la curva e l'istogramma siano confrontabili. Cosa è necessario fare?\n",
+    "<LI>Sovrapponete all'istogramma delle frequenze la funzione densità di probabilità gaussiana di valor medio $\\mu$ e deviazione standard $\\sigma$, facendo attenzione che la curva e l'istogramma siano confrontabili. Cosa &egrave; necessario fare?\n",
     "</OL>\n",
     "</div>"
    ]
@@ -680,7 +667,7 @@
    "source": [
     "## 9.4 Distribuzioni di probabilità\n",
     "\n",
-    "Il modulo `scipy.stats` contiene le principali distribuzioni di probabilità , sia discrete che continue, funzioni che permettono di calcolare i parametri statistici più comuni di un set di dati, funzioni che eseguono test statistici e test di correlazione fra uno o più set di dati.<BR>\n",
+    "Il modulo `scipy.stats` contiene le principali distribuzioni di probabilit&agrave;, sia discrete che continue, funzioni che permettono di calcolare i parametri statistici pi&ugrave; comuni di un set di dati, funzioni che eseguono test statistici e test di correlazione fra uno o pi&ugrave; set di dati.<BR>\n",
     "Per ulteriori informazioni https://docs.scipy.org/doc/scipy/reference/stats.html."
    ]
   },
