--- a/ipynb/01_CourseInfo.ipynb
+++ b/ipynb/01_CourseInfo.ipynb
@@ -6,6 +6,7 @@
    "source": [
     "TECNICHE INFORMATICHE PER LA FISICA\n",
     "====================================\n",
+    "\n",
     "Ezio Maina\n",
     "-----------"
    ]
@@ -32,9 +33,9 @@
     "- Start now, perfect it later. Molti dettagli importanti verranno lasciati da parte e ripresi in Introduzione alla Programmazione\n",
     "\n",
     "<div style= 'padding:20px 20px 20px 150px;'>\n",
-    "    <img src=\"../Images/Programming_Languages.png\" width=\"500\" align=\"center\"/>\n",
+    "    <img src=\"../Images/top_programming_languages_2024.jpg\" width=\"600\" align=\"center\"/>\n",
     "</div>\n",
-    "    \n",
+    "\n",
     "Il nome Python non deriva dal serpente pitone ma da una surreale serie comica trasmessa dalla BBC fra il 1969 e il 1974. "
    ]
   },
@@ -44,14 +45,17 @@
    "source": [
     "<div style= 'padding:20px 20px 0px 150px;'>\n",
     "    <img src=\"../Humour/MontyPython.jpg\" width=\"500\" align=\"center\"/>\n",
-    "</div>"
+    "</div>\n",
+    "&nbsp;<br>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Scaricate e installate la distribuzione Anaconda da https://www.anaconda.com/download (Windows,Linux,Mac) sul vostro laptop prima della prossima lezione. Su Windows consiglio fortemente di installare prima WSL e poi scaricare Anaconda in WSL. "
+    "<div>\n",
+    "<b> Scaricate e installate la distribuzione Anaconda da https://www.anaconda.com/download (Windows,Linux,Mac) sul vostro laptop prima della prossima lezione. Su Windows consiglio fortemente di installare prima WSL e poi scaricare Anaconda in WSL.</b>\n",
+    "</div>"
    ]
   },
   {
@@ -173,10 +177,10 @@
     "Qualche suggerimento:<BR>\n",
     "    \n",
     "Tutorial di Python:<BR>\n",
-    "[The Python Tutorial](https://docs.python.org/3/tutorial/)\n",
+    "[The Python Tutorial](https://docs.python.org/3/tutorial/index.html)\n",
     "    \n",
     "Tutorial di Jupyter:<BR>\n",
-    "[Real Python: Jupyters Notebook: An Introduction](https://realpython.com/jupyter-notebook-introduction/)\n",
+    "[Dataquest: Jupyter Notebook: An Introduction](https://www.dataquest.io/blog/jupyter-notebook-tutorial/)\n",
     "\n",
     "Libri/Lezioni:<BR>\n",
     "[Hans Fanghor - Python for Computational Science and Engineering](https://fangohr.github.io/teaching/python/book.html)<BR>\n",
@@ -210,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   },
   "toc": {
    "base_numbering": 1,
